--- a/gmall-cms/src/main/resources/application.properties
+++ b/gmall-cms/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mysql://49.235.59.157:3306/gmall_cms?useUnicode=true&useSSL=false&characterEncoding=utf8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=123456
 
+dubbo.application.name=gmall-cms
+dubbo.registry.address=zookeeper://49.235.59.157:2181
+dubbo.protocol.name=dubbo
+dubbo.protocol.port=20880
+dubbo.consumer.check=false
